--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
       - name: login to docker hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: install buildx
-        run: make buildx-prepare
+      - name: create buildx worker
+        run: docker buildx create --use
 
       - name: build
-        run: make buildx
+        run: docker buildx build --platform=linux/arm/v7,linux/amd64 .
