--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,5 @@ jobs:
       - name: login to docker hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: check docker version
-        run: docker buildx version
-
-      - name: create buildx worker
-        run: docker buildx create --use
-
       - name: build
-        run: docker buildx build --platform=linux/arm/v7,linux/amd64 .
+        run: make buildx
