--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,18 +8,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-
-      - name: install qemu
-        run: docker run --rm --privileged hypriot/qemu-register
-
       - name: checkout
         uses: actions/checkout@v1
+
+      - name: prepare buildx
+        id: buildx
+        uses: crazy-max/ghaction-docker-buildx@v1
+        with:
+          version: v0.3.1
 
       - name: login to docker hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: prepare buildx
-        run: make buildx-prepare
-
       - name: build
-        run: make buildx
+        run: make buildx-push
