--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,14 @@ jobs:
         with:
           version: v0.3.1
 
+      - name: get the version
+        id: container
+        uses: qmx/ghaction-container-tag@master
+        with:
+          dockerhub_namespace: "${{ secrets.DOCKERHUB_NAMESPACE }}"
+
       - name: login to docker hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: build
-        run: make buildx-push
+      - name: build and push latest
+        run: docker buildx build --platform linux/amd64,linux/arm/v7 --push -t "${{ steps.container.outputs.image }}:${{ steps.container.outputs.version }}" .
