--- a/.github/workflows/build-latest.yml
+++ b/.github/workflows/build-latest.yml
@@ -9,6 +9,10 @@ jobs:
   build:
     name: build images and push
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        target:
+          - "linux/amd64"
 
     steps:
       - name: checkout
@@ -26,8 +30,15 @@ jobs:
         with:
           dockerhub_namespace: "${{ secrets.DOCKERHUB_NAMESPACE }}"
 
+
+      - name: convert the arch
+        id: sane_arch
+        uses: qmx/ghaction-docker-arch@master
+        with:
+          docker_arch: "${{ matrix.target }}"
+
       - name: login to docker hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: build and push latest
-        run: docker buildx build --platform linux/amd64,linux/arm/v7 --push -t "${{ steps.container.outputs.image }}:latest" .
+        run: docker buildx build --platform ${{ matrix.target }}  --push -t "${{ steps.container.outputs.image }}:latest-${{ steps.sane_arch.outputs.arch }}" .
