--- a/.github/workflows/build-latest.yml
+++ b/.github/workflows/build-latest.yml
@@ -41,16 +41,7 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: build and push latest
-        run: docker buildx build --platform ${{ matrix.target }} --load -t "${{ steps.container.outputs.image }}:latest-${{ steps.sane_arch.outputs.arch }}" .
-
-      - name: store intermediate image
-        run: docker save "${{ steps.container.outputs.image }}:latest-${{ steps.sane_arch.outputs.arch }}" | gzip > "${{ steps.container.outputs.image }}:latest-${{ steps.sane_arch.outputs.arch }}.tar.gz"
-
-      - name: upload artifacts
-        uses: actions/upload-artifact@v1
-        with:
-          name: "${{ steps.container.outputs.image }}:latest-${{ steps.sane_arch.outputs.arch }}.tar.gz"
-          path: "${{ steps.container.outputs.image }}:latest-${{ steps.sane_arch.outputs.arch }}.tar.gz"
+        run: docker buildx build --platform ${{ matrix.target }} --push -t "${{ steps.container.outputs.image }}:latest-${{ steps.sane_arch.outputs.arch }}" .
 
   assemble-image:
     name: build images and push
@@ -72,20 +63,6 @@ jobs:
         uses: qmx/ghaction-container-tag@master
         with:
           dockerhub_namespace: "${{ secrets.DOCKERHUB_NAMESPACE }}"
-
-      - uses: actions/download-artifact@v2
-        with:
-          name: "${{ steps.container.outputs.image }}:latest-amd64.tar.gz"
-
-      - uses: actions/download-artifact@v2
-        with:
-          name: "${{ steps.container.outputs.image }}:latest-armv7.tar.gz"
-
-      - name: load images
-        run: docker load "${{ steps.container.outputs.image }}:latest-amd64.tar.gz"
-
-      - name: load images
-        run: docker load "${{ steps.container.outputs.image }}:latest-armv7.tar.gz"
 
       - name: login to docker hub
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
