--- a/.github/workflows/build-tag.yml
+++ b/.github/workflows/build-tag.yml
@@ -23,14 +23,13 @@ jobs:
         id: buildx
         uses: crazy-max/ghaction-docker-buildx@v1
         with:
-          version: v0.3.1
+          buildx-version: v0.3.1
 
       - name: get the version
         id: container
         uses: qmx/ghaction-container-tag@master
         with:
           dockerhub_namespace: "${{ secrets.DOCKERHUB_NAMESPACE }}"
-
 
       - name: convert the arch
         id: sane_arch
@@ -42,4 +41,31 @@ jobs:
         run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: build and push latest
-        run: docker buildx build --platform ${{ matrix.target }}  --push -t "${{ steps.container.outputs.image }}:${{ steps.container.outputs.version }}-${{ steps.sane_arch.outputs.arch }}" .
+        run: docker buildx build --platform ${{ matrix.target }} --push -t "${{ steps.container.outputs.image }}:${{ steps.container.outputs.version }}-${{ steps.sane_arch.outputs.arch }}" .
+
+  assemble-image:
+    name: build images and push
+    runs-on: ubuntu-latest
+    needs: ["build"]
+
+    steps:
+      - name: checkout
+        uses: actions/checkout@v1
+
+      - name: prepare buildx
+        id: buildx
+        uses: crazy-max/ghaction-docker-buildx@v1
+        with:
+          buildx-version: v0.3.1
+
+      - name: get the version
+        id: container
+        uses: qmx/ghaction-container-tag@master
+        with:
+          dockerhub_namespace: "${{ secrets.DOCKERHUB_NAMESPACE }}"
+
+      - name: login to docker hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: assemble image
+        run: docker buildx imagetools create -t "${{ steps.container.outputs.image }}:${{ steps.container.outputs.version }}" "${{ steps.container.outputs.image }}:${{ steps.container.outputs.version }}-amd64" "${{ steps.container.outputs.image }}:${{ steps.container.outputs.version }}-armv7"
