--- a/.github/workflows/build-latest.yml
+++ b/.github/workflows/build-latest.yml
@@ -6,66 +6,34 @@ on:
       - 'master'
 
 jobs:
-  build:
-    name: build images and push
+  docker:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        target:
-          - "linux/amd64"
-          - "linux/arm/v7"
-
     steps:
-      - name: checkout
-        uses: actions/checkout@v1
-
-      - name: prepare buildx
-        id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v1
-        with:
-          buildx-version: v0.3.1
-
-      - name: get the version
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+      -
+        name: get the version
         id: container
         uses: qmx/ghaction-container-tag@master
         with:
           dockerhub_namespace: "${{ secrets.DOCKERHUB_NAMESPACE }}"
-
-      - name: convert the arch
-        id: sane_arch
-        uses: qmx/ghaction-docker-arch@master
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
-          docker_arch: "${{ matrix.target }}"
-
-      - name: login to docker hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      - name: build and push latest
-        run: docker buildx build --platform ${{ matrix.target }} --push -t "${{ steps.container.outputs.image }}:latest-${{ steps.sane_arch.outputs.arch }}" .
-
-  assemble-image:
-    name: build images and push
-    runs-on: ubuntu-latest
-    needs: ["build"]
-
-    steps:
-      - name: checkout
-        uses: actions/checkout@v1
-
-      - name: prepare buildx
-        id: buildx
-        uses: crazy-max/ghaction-docker-buildx@v1
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v2
         with:
-          buildx-version: v0.3.1
-
-      - name: get the version
-        id: container
-        uses: qmx/ghaction-container-tag@master
-        with:
-          dockerhub_namespace: "${{ secrets.DOCKERHUB_NAMESPACE }}"
-
-      - name: login to docker hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-
-      - name: assemble image
-        run: docker buildx imagetools create -t "${{ steps.container.outputs.image }}:latest" "${{ steps.container.outputs.image }}:latest-amd64" "${{ steps.container.outputs.image }}:latest-armv7"
+          context: .
+          push: true
+          tags: "${{ steps.container.outputs.image }}:latest"
